Fix: Final fix between User and Role relationship