@@ -6,7 +6,6 @@ import com.unibague.magno.domain.spi.IRolePersistencePort;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class UserResponseMapperImpl implements UserResponseMapper {
@@ -38,6 +37,6 @@ public class UserResponseMapperImpl implements UserResponseMapper {
     public List<UserResponse> toResponseList(List<User> userResponse) {
         return userResponse.stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
